--- a/UserService/UserService.Application/UserService.Application.csproj
+++ b/UserService/UserService.Application/UserService.Application.csproj
@@ -16,7 +16,7 @@
 		<PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
 	</ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CustomerService.Domain\CustomerService.Domain.csproj" />
+    <ProjectReference Include="..\UserService.Domain\UserService.Domain.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Features\Customers\Commands\" />
