--- a/UserService/UserService.Infrastructure/UserService.Infrastructure.csproj
+++ b/UserService/UserService.Infrastructure/UserService.Infrastructure.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CustomerService.Application\CustomerService.Application.csproj" />
+    <ProjectReference Include="..\UserService.Application\UserService.Application.csproj" />
   </ItemGroup>
 
 </Project>
